--- a/DetailView.xib
+++ b/DetailView.xib
@@ -62,6 +62,7 @@
 						<string key="IBUIText"/>
 						<object class="IBUITextInputTraits" key="IBUITextInputTraits">
 							<int key="IBUIAutocapitalizationType">2</int>
+							<int key="IBUIAutocorrectionType">2</int>
 							<bool key="IBUIEnablesReturnKeyAutomatically">YES</bool>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
@@ -111,13 +112,13 @@
 							</object>
 						</array>
 					</object>
-					<object class="IBUIImageView" id="614361630">
+					<object class="IBUIImageView" id="1058577025">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 76}, {104, 160}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="711339600"/>
+						<reference key="NSNextKeyView" ref="614361630"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
@@ -125,10 +126,6 @@
 						</object>
 						<string key="IBUIContentStretch">{{0.5, 0.5}, {0.050000000000000003, 0.050000000000000003}}</string>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<object class="NSCustomResource" key="IBUIImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">photoFrame.png</string>
-						</object>
 					</object>
 					<object class="IBUIButton" id="77947162">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -136,7 +133,7 @@
 						<string key="NSFrame">{{20, 75}, {102, 157}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="614361630"/>
+						<reference key="NSNextKeyView" ref="1058577025"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUIContentMode">4</int>
@@ -174,6 +171,22 @@
 						</object>
 						<reference key="IBUIFontDescription" ref="786126276"/>
 						<reference key="IBUIFont" ref="796998375"/>
+					</object>
+					<object class="IBUIImageView" id="614361630">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{28, 82}, {88, 145}}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="711339600"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">2</int>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
+							<string key="IBUIAccessibilityLabel"/>
+						</object>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 					<object class="IBUILabel" id="424532265">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -248,6 +261,22 @@
 					<int key="connectionID">29</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">imageFrameView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="1058577025"/>
+					</object>
+					<int key="connectionID">40</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">addPicButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="77947162"/>
+					</object>
+					<int key="connectionID">41</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">skip:</string>
 						<reference key="source" ref="827154514"/>
@@ -287,9 +316,10 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="983938707"/>
 							<reference ref="424532265"/>
-							<reference ref="77947162"/>
-							<reference ref="614361630"/>
 							<reference ref="711339600"/>
+							<reference ref="1058577025"/>
+							<reference ref="614361630"/>
+							<reference ref="77947162"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -357,6 +387,11 @@
 						<reference key="object" ref="424532265"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">39</int>
+						<reference key="object" ref="1058577025"/>
+						<reference key="parent" ref="191373211"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -375,6 +410,7 @@
 					</object>
 				</object>
 				<string key="37.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="39.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -385,7 +421,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">37</int>
+			<int key="maxID">41</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -424,6 +460,7 @@
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="addPicButton">UIButton</string>
 						<string key="detailTextView">UITextView</string>
+						<string key="imageFrameView">UIImageView</string>
 						<string key="imageView">UIImageView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -434,6 +471,10 @@
 						<object class="IBToOneOutletInfo" key="detailTextView">
 							<string key="name">detailTextView</string>
 							<string key="candidateClassName">UITextView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="imageFrameView">
+							<string key="name">imageFrameView</string>
+							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="imageView">
 							<string key="name">imageView</string>
@@ -451,10 +492,6 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="NS.key.0">photoFrame.png</string>
-			<string key="NS.object.0">{110, 110}</string>
-		</object>
 		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
 </archive>
